--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy website on push
+name: 🎱 [Test] Deploy website on push
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   web-deploy:
-    name: 🎉 Deploy
+    name: 🎉 Test deploy
     runs-on: ubuntu-latest
     steps:
       - name: 🚚 Get latest code
