update: exclude のテスト

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -26,3 +26,4 @@ jobs:
             **/.git*/**
             **/.vscode/**
             **/node_modules/**
+            xs363308.xsrv.jp/public_html/scss/**
