--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
             **/.git*/**
             **/.vscode/**
             **/node_modules/**
-            scss/**
+            ./scss/**
           log-level: verbose
           dry-run: true
           # dry-run: ${{ github.event.inputs.dry-run }}
