update: ログの修正

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,8 @@ jobs:
   deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
-    environment: ${{ env.ENVIRONMENT }}
+    environment:
+      name: "$ENVIRONMENT"
     steps:
       - name: 🚚 Get latest code
         uses: actions/checkout@v4
