update: デプロイの修正

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: 📝 Print information
         run: |
           echo "## Input Parameters" >> $GITHUB_STEP_SUMMARY
-          echo ${{ tojson(inputs) }} >> $GITHUB_STEP_SUMMARY
+          echo "${{ tojson(inputs) }}" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     name: 🎉 Deploy
