--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,15 +20,13 @@ env:
 
 jobs:
   info:
-    name: ℹ️ Information
+    name: 💲 Information
     runs-on: ubuntu-latest
     steps:
       - name: 📝 Print information
         run: |
           echo "## Input Parameters" >> $GITHUB_STEP_SUMMARY
-          echo "```json" >> $GITHUB_STEP_SUMMARY
-          echo "${{ tojson(inputs) }}" >> $GITHUB_STEP_SUMMARY
-          echo "```" >> $GITHUB_STEP_SUMMARY
+          echo "${{ tojson(env) }}" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     name: 🎉 Deploy
