--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ on:
         default: true
 
 env:
+  ENVIRONMENT: ${{ github.event.inputs.environment || 'Production' }}
   DRY_RUN: ${{ github.event.inputs.dry-run || true }}
 
 jobs:
@@ -25,9 +26,10 @@ jobs:
     steps:
       - name: 📝 Print information
         run: |
+          echo "## Environment" >> $GITHUB_STEP_SUMMARY
+          echo "$ENVIRONMENT" >> $GITHUB_STEP_SUMMARY
           echo "## Input Parameters" >> $GITHUB_STEP_SUMMARY
-          echo "$GITHUB_ENV" >> $GITHUB_STEP_SUMMARY
-          echo -e "\`\`\`json\n{ "test": "hoge" }\n\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo -e "\`\`\`json\n${{ toJson(github.event.inputs) }}\n\`\`\`" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     name: 🎉 Deploy
