--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: 📝 Print information
         run: |
           echo -e "## Environment\n$ENVIRONMENT" >> $GITHUB_STEP_SUMMARY
-          echo -e "## Input Parameters\n\`\`\`js\n${{ toJson(github.event.inputs) }}\n\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo -e "## Input Parameters\n\`\`\`js\n${{ toJson(fromJson(toJson(github.event.inputs))) }}\n\`\`\`" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     name: 🎉 Deploy
