--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 📝 Print information
-        run: |
-          echo -e "## Environment\n${{ github.event.inputs.environment || 'Production' }}" >> $GITHUB_STEP_SUMMARY
-          echo -e "## Input Parameters\n\`\`\`yaml\n${{ toJson(github.event.inputs) }}\n\`\`\`" >> $GITHUB_STEP_SUMMARY
+        run: echo -e "## Input Parameters\n\`\`\`yaml\n${{ toJson(github.event.inputs) }}\n\`\`\`" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     name: 🎉 Deploy
